# vision

./: .dockerignore  .gitattributes  .gitignore  .sops.yaml  CLAUDE.md  Makefile  README.md  ai-coder-prompt-v4.md  argus_v4_spec.md  product-spec-v4.md  traffic_monitor_v4_spec.md
backend/: Dockerfile  Dockerfile.edge  README.md  alembic.ini  pyproject.toml  requirements-edge.txt
backend/native/jetson_capture/: README.md
backend/scripts/: bench_jetson.py  bench_vision.py  register_model_preset.py
backend/src/: lap.py
backend/src/argus/: __init__.py  compat.py  config.py  main.py
backend/src/traffic_monitor/: config.py  main.py
backend/tests/: conftest.py  test_app_lifecycle.py
backend/tests/api/: test_app.py  test_billing_routes.py  test_camera_setup_routes.py  test_configuration_routes.py  test_deployment_model_lifecycle_routes.py  test_deployment_routes.py  test_export_endpoints.py  test_fleet_routes.py  test_history_endpoints.py  test_import_boundaries.py  test_incident_rule_routes.py  test_link_routes.py  test_maritime_routes.py  test_model_asset_routes.py  test_model_catalog_routes.py  test_model_lifecycle_contracts.py  test_model_lifecycle_routes.py  test_openapi_export.py  test_operations_endpoints.py  test_pack_routes.py  test_platform_bootstrap_routes.py  test_policy_draft_routes.py  test_prompt5_routes.py  test_prompt6_streaming_routes.py  test_prompt9_routes.py  test_query_nats_route.py  test_runtime_artifact_routes.py  test_runtime_soak_routes.py  test_supervisor_model_job_routes.py  test_support_routes.py  test_telemetry_ws.py  test_user_management_routes.py
backend/tests/billing/: conftest.py  test_billing_service.py
backend/tests/core/: test_central_dockerfile.py  test_config.py  test_db.py  test_dev_compose.py  test_edge_compose.py  test_edge_dockerfile.py  test_events.py  test_full_product_boundaries.py  test_logging.py  test_pack_boundaries.py  test_packless_empty_registry.py  test_pyproject_dependencies.py  test_security.py
backend/tests/e2e/: test_maritime_fleetops_smoke.py
backend/tests/fleet/: test_fleet_service.py
backend/tests/inference/: test_e2e_worker.py  test_engine.py  test_engine_config_loading.py  test_publisher.py  test_scheduler.py
backend/tests/link/: test_edge_agent.py  test_link_service.py  test_probe_runner.py  test_reflector.py  test_udp_sequence.py
backend/tests/maritime/: test_billing_support.py  test_entities.py  test_evidence.py  test_runtime.py  test_telemetry.py  test_templates.py
backend/tests/migrations/: test_alembic_config.py
backend/tests/models/: test_model_edge_lifecycle_tables.py  test_schema.py
backend/tests/scripts/: test_register_model_preset.py  test_runtime_artifact_scripts.py  test_seed_whole_product_smoke_fixture.py  test_tracking_live_ab_smoke.py  test_tracking_replay_benchmark.py  test_validation_scripts.py  test_whole_product_live_smoke.py  test_worker_perf_probe.py
backend/tests/services/: test_app_services.py  test_browser_delivery_profiles.py  test_camera_service.py  test_camera_sources.py  test_camera_worker_config.py  test_cross_camera_threads.py  test_deployment_model_inventory.py  test_deployment_nodes.py  test_edge_configuration_assignments.py  test_evidence_ledger.py  test_evidence_storage.py  test_history_service.py  test_identity_bootstrap.py  test_incident_capture.py  test_incident_rules.py  test_incident_service.py  test_llm_provider_runtime.py  test_local_first_sync.py  test_model_admission.py  test_model_catalog.py  test_model_lifecycle_imports.py  test_model_service.py  test_operational_memory.py  test_operations_service.py  test_operator_configuration.py  test_pack_registry.py  test_platform_bootstrap.py  test_policy_drafts.py  test_privacy_manifests.py  test_query_service.py  test_runtime_artifact_build_jobs.py  test_runtime_artifacts.py  test_runtime_configuration.py  test_runtime_passports.py  test_runtime_selection.py  test_runtime_soak.py  test_scene_contracts.py  test_site_service.py  test_stream_delivery.py  test_stream_service.py  (+5 more)
backend/tests/streaming/: test_mediamtx.py  test_webrtc.py
backend/tests/supervisor/: test_artifact_build_jobs.py  test_credential_store.py  test_edge_configuration.py  test_hardware_probe.py  test_metrics_probe.py  test_model_inventory.py  (+10 more)
installer/: README.md  pyproject.toml
installer/lib/: render_mediamtx_config.py
installer/linux/: install-edge.sh  install-master.sh  uninstall.sh
installer/macos/: install-master.sh  uninstall.sh
installer/manifests/: dev-example.json
installer/tests/: test_appliance_wrappers.py  test_cli.py  test_edge_installer_artifacts.py  test_frontend_appliance_artifacts.py  test_jetson_ort_resolver.py  test_linux_master_artifacts.py  test_macos_master_artifacts.py  test_manifest.py  test_mediamtx_config_renderer.py  test_model_bundle.py  test_release_gate.py
installer/vezor_installer/: __init__.py  cli.py  http.py  jetson_ort.py  manifest.py  model_bundle.py  paths.py
(+913 files in other folders)
