[project]
name = "vezor-installer"
version = "0.1.0"
description = "Vezor product installer and local support tooling"
requires-python = ">=3.12,<3.13"
dependencies = [
  "httpx>=0.28",
  "pydantic>=2.8",
  "pytest>=8.3",
  "rich>=13.9",
  "ruff>=0.8",
]

[project.scripts]
vezorctl = "vezor_installer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vezor_installer"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
